# zzzerver

./: .gitignore  README.md  meson.build
data/: Application.css  com.github.rasmus91.zzzerver.appdata.xml  com.github.rasmus91.zzzerver.desktop  com.github.rasmus91.zzzerver.gresource.xml
src/: Application.vala
src/Models/: IServer.vala  ServerStatus.vala  WakeOnLanServer.vala
src/Models/ObservableCollections/: IObservableBase.vala  IObservableCollection.vala  IObservableList.vala  ObservableCollection.vala  ObservableList.vala
src/Models/Observables/: IObservableBase.vala  IObservableCollection.vala  IObservableList.vala  ObservableCollection.vala  ObservableList.vala
src/Services/WakeOnLan/: IWakeOnLanService.vala  SshWakeOnLanService.vala
src/Utility/Factories/: ServerFormFactory.vala
src/Widgets/: AbstractServerForm.vala  HeaderBar.vala  HistoryStack.vala  IServerForm.vala  ServerDialog.vala  ServerStatusIndicator.vala  WakeOnLanServerForm.vala  Welcome.vala
src/Widgets/Main/: DefaultMainView.vala  DefaultServerRow.vala  IMainView.vala
